--- a/informacao/estrutura-curricular.html
+++ b/informacao/estrutura-curricular.html
@@ -155,16 +155,16 @@
 	          <p><b>IMAGEM Tabela 4</b></p>
 	          <h2>Fluxo sugerido</h2>
 	          <p>Conforme o diagrama abaixo, as disciplinas estão organizadas em nove períodos letivos. Os quatro primeiros períodos concentram as disciplinas de formação básica em Computação: disciplinas de Computação propriamente ditas e aquelas de Matemática. Os demais períodos incluem disciplinas com ênfase na formação específica em Engenharia de Software.</p>
-	          <p><b>IMAGEM 2</b></p>
+	          <img src="../assets/img/fluxo-sugerido.png" alt="Fluxo sugerido.">
 	          <p>Os nove semestres são detalhados nas tabelas seguintes.</p>
 	          <p><b>9 TABELAS - 1 PARA CADA PERÍODO</b></p>
 	          <h2>Pré-requisitos</h2>
 	          <p>Existem pré-requisitos entre as disciplinas. Aqueles das disciplinas optativas são exibidos na Figura 3, enquanto aqueles das disciplinas obrigatórias na  Figura 4. </p>
 	          <p>Observe que as disciplinas optativas estão agrupadas na Figura 3 conforme as opções oferecidas aos estudantes. Por exemplo, a disciplina OPTATIVA 1, sugerida para ser cursada no 3.º período, será escolhida pelo estudante dentre as seguintes opções: “Sistemas Operacionais”, “Pesquisa Operacional” ou “Linguagens Formais e Autômatos”. Para a disciplina OPTATIVA 2, sugerida para ser cursada no 4.º período, as opções são: “Redes de Computadores”, “Introdução à Língua Brasileira de Sinais” e “Compiladores”. Para a disciplina OPTATIVA 3, sugerida para ser cursada no 8.º período, as opções são: “Sistemas Distribuídos”, “Mercado e Economia de Software” e “Metodologia e Experimentação em Engenharia de Software”.</p>
 	          <p>Ainda convém destacar que algumas disciplinas optativas dependem de outras obrigatórias. Por exemplo, conforme ilustrado abaixo, “Pesquisa Operacional” tem como pré-requisito a disciplina obrigatória “Álgebra Linear”.</p>
-	          <p><b>IMAGEM 3</b></p>
+	          <img src="../assets/img/pre-requitito-optativas.png" alt="Pré-requisitos das disciplinas optativas.">
 	          <p>Todos os pré-requisitos das disciplinas obrigatórias são exibidos na Figura 4. As disciplinas seguem alinhadas, na horizontal, do primeiro até o último (nono) período do curso. Em particular, o caminho mais longo, não é o caminho crítico, encontra-se devidamente destacado dos demais.</p>
-	          <p><b>IMAGEM 4</b></p>
+	          <img src="../assets/img/pre-requitito-obrigatorio.png" alt="Pré-requisitos das disciplinas obrigatorio.">
 					</main>
 				</div>
 			</div>
