--- a/disciplinas.html
+++ b/disciplinas.html
@@ -69,16 +69,16 @@
 	<!-- End Navbar -->
 	<div class="wrapper">
 	  <div class="page-header page-header-small">
-	      <div class="page-header-image" data-parallax="true" style="background-image: url('assets/img/ilya-pavlov-87438.jpg');">
+	      <div class="page-header-image" data-parallax="true" style="background-image: url('assets/img/stefan-stefancik-257625.jpg');">
 	      </div>
 	      <div class="container">
 	          <div class="content-center">
-	              <h1 class="title">Bacharelado em Engenharia de Software</h1>
+	              <h1 class="title">Disciplinas</h1>
 	          </div>
 	      </div>
 	  </div>
     <div class="section section-subjects">
-      <div class="container"id="subjects">
+      <div class="container text-center" id="subjects">
 					<div class="col-md-12 text-center">
 						<img class="" style="width: 35%; max-width: 220px;" src="assets/img/loading.gif"/>
 					</div>
@@ -142,46 +142,49 @@
 <script type="text/javascript">
 	$( document ).ready(function() {
 
-		var busca = queryObj();
-		var keyword = busca.pesquisa;
+		var subject = queryObj();
+		var subjectAlias = subject.disciplina;
 		var response = '';
 		var isReturned = false;
 
-		if (typeof keyword != "undefined") {
+		if (typeof subjectAlias != "undefined") {
 			retornoBusca = setTimeout(function(){
-				keyword = keyword.toLowerCase();
-				$.getJSON("../dicionario.json", function(data) {
-					topicos = data.topicos;
-					$.each(topicos, function(i, item) {
-						palavrasChave = topicos[i].palavraChave;
-						$.each(palavrasChave, function(j, item) {
-							targetWord = palavrasChave[j];
-							targetWord = targetWord.toLowerCase();
-							targetWordLength = targetWord.length;
-							match = levenshtein_distance_a(keyword, targetWord) / targetWordLength;
-							if (match <= 0.65 && isReturned == false) {
-								isReturned = true;
-								response += '<div class="col-md-12 mb-4 search-result">';
-								response += '<a href="' + topicos[i].caminho + '">';
-								response += '<h2>' + topicos[i].titulo + '</h2>';
-								response += '</a>';
-								response += '</div>';
-								console.log(response);
+				$.getJSON("disciplinas.json", function(data) {
+					subjects = data;
+					$.each(subjects, function(i, item) {
+						if (subjects[i].alias == subjectAlias) {
+							response += '<h1 class="title">' + subjects[i].title + '</h1>';
+							response += '<h2>' + subjects[i].period + 'º Período</h2>';
+							response += '<div class="text-left">';
+							response += '<h3 class="title"> Carga Horária:</h3>';
+							response += '<h4> Teórica: ' + subjects[i].workload.theoretical + ' horas</h4>';
+							response += '<h4> Prática: ' + subjects[i].workload.practice + ' horas</h4>';
+							response += '<h3 class="title"> Natureza:</h3>';
+							if (subjects[i].kind.isCommon == 1) {
+								response += '<h4>Núcleo Comum</h4>';
+							} else {
+								response += '<h4>Núcleo Específico</h4>';
 							}
-						});
+							if (subjects[i].kind.isRequired == 1) {
+								response += '<h4>Obrigatória</h4>';
+							} else {
+								response += '<h4>Optativa</h4>';
+							}
+							response += '<h3><strong>Unidade Responsável:</strong> ' + subjects[i].unit + '</h3>';
+							response += '</div>';
 
-						isReturned = false;
+						}
 					});
 
 					if (response != "") {
-						document.getElementById('resultado').innerHTML = response;
+						document.getElementById('subjects').innerHTML = response;
 					} else {
 						response += '<div class="col-md-12">';
 						response += '<div class="alert alert-info" role="alert">';
 						response += 'Nenhum registro encontrado :(';
 						response += '</div>'
 						response += '</div>';
-						document.getElementById('resultado').innerHTML = response;
+						document.getElementById('subjects').innerHTML = response;
 					}
 				});
 			}, 2000);
@@ -190,22 +193,46 @@
 				$.getJSON("disciplinas.json", function(data) {
 					subjects = data;
 					var period = 1;
-					response += '<h2 class="title">1º Período</h2>'
+					response += '<h1 class="title">1º Período</h1>'
 					response += '<div class="row" id="1-period">';
 					$.each(subjects, function(i, item) {
 						if (subjects[i].period != period) {
 							response += '</div>';
-							response += '<h2 class="title">' + subjects[i].period + 'º Período</h2>'
+							response += '<h1 class="title">' + subjects[i].period + 'º Período</h1>'
 							response += '<div class="row" id="' + subjects[i].period + '-period">';
 							period = subjects[i].period;
 						}
 						response += '<div class="col-md-6">';
+						response += '<a href="disciplinas.html?disciplina=' + subjects[i].alias + '">';
 						response += '<div class="card">';
 						response += '<div class="card-body">';
-						response += '<h4 class="card-title">' + subjects[i].title + '</h4>';
-						response +=	'<p class="card-text">' + subjects[i].period + 'º período</p>';
-						response += '<a href="disciplinas.html?disciplina=' + subjects[i].alias + '" class="btn btn-primary">Ver mais</a>';
-						response += '</div></div></div>';
+						response += '<h3 class="card-title">' + subjects[i].title + '</h3>';
+						response += '<div class="separator separator-primary"></div>';
+						response += '<div class="row">';
+						response += '<div class="col-6">';
+						response += '<h5>Carga Horária</h5>'
+						response += '<p>Teórica: ' + subjects[i].workload.theoretical + ' horas</p>';
+						response += '<p>Prática: ' + subjects[i].workload.practice + ' horas</p>'
+						response += '</div>';
+						response += '<div class="col-6">';
+						response += '<h5>Natureza</h5>';
+						if (subjects[i].kind.isCommon == 1) {
+							response += '<p>Núcleo Comum</p>';
+						} else {
+							response += '<p>Núcleo Específico</p>';
+						}
+						if (subjects[i].kind.isRequired == 1) {
+							response += '<p>Obrigatória</p>';
+						} else {
+							response += '<p>Optativa</p>';
+						}
+						response += '</div>';
+						// response += '<a href="disciplinas.html?disciplina=' + subjects[i].alias + '" class="btn btn-primary">Ver mais</a>';
+						response += '</div>';
+						response += '</div>';
+						response += '</div>';
+						response += '</a>';
+						response += '</div>';
 					});
 
 					if (response != "") {
