--- a/informacao/principios-norteadores.html
+++ b/informacao/principios-norteadores.html
@@ -193,7 +193,7 @@
 <script src="../assets/js/plugins/bootstrap-datepicker.js" type="text/javascript"></script>
 <!-- Control Center for Now Ui Kit: parallax effects, scripts for the example pages etc -->
 <script src="../assets/js/now-ui-kit.js?v=1.1.0" type="text/javascript"></script>
-<script src="assets/js/accessibility.js" type="text/javascript"></script>
+<script src="../assets/js/accessibility.js" type="text/javascript"></script>
 
 <script type="text/javascript">
   $( document ).ready(function() {
