--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
 							Ficou intereçado? Para mais informações, conheça o Projeto Pedagógico do Curso (PPC):
 						</h5>
 						<div class="d-flex flex-column flex-md-row lead mb-3 mx-auto btns">
-							<a href="informacao/apresentacao.html" class="btn btn-lg mr-md-3">Saiba Mais</a>
-							<a href="assets/docs/ppc-bes.pdf" download="PPC-BES.pdf" class="btn btn-lg btn-info">Download</a>
+							<a href="informacao/apresentacao.html" class="btn btn-lg mr-md-3 btn-read-more">Saiba Mais</a>
+							<a href="assets/docs/ppc-bes.pdf" download="PPC-BES.pdf" class="btn btn-lg btn-info btn-download">Download</a>
 						</div>
 						<p class="text-muted mb-0">
 							Atualmente na versão de 2017
@@ -259,7 +259,7 @@
 <script src="assets/js/accessibility.js" type="text/javascript"></script>
 
 <script type="text/javascript">
-  $( document ).ready(function() {    
+  $( document ).ready(function() {
     fontSizeBackup();
   });
 </script>
