--- a/disciplinas.html
+++ b/disciplinas.html
@@ -172,7 +172,7 @@
 					$.each(subjects, function(i, item) {
 						if (subjects[i].alias == subjectAlias) {
 							response += '<h2 class="title">' + subjects[i].title + '</h2>';
-							response += '<h2>' + subjects[i].period + 'º Período</h2>';
+							response += '<h3>' + subjects[i].period + 'º Período</h3>';
 							response += '<div class="text-left">';
 							response += '<h4 class="title"> Carga Horária:</h4>';
 							response += '<p> Teórica: ' + subjects[i].workload.theoretical + ' horas</p>';
@@ -210,21 +210,21 @@
 							}
 
 							response += '<h4 class="title">Ementa:</h4>';
-							response += '<ol>';
+							response += '<ol class="list-content">';
 							$.each(subjects[i].menu, function(l, item) {
 								response += '<li>' + subjects[i].menu[l] + '</li>';
 							});
 							response += '</ol>';
 
 							response += '<h4 class="title">Bibliografia Básica:</h4>';
-							response += '<ul>';
+							response += '<ul class="list-content">';
 							$.each(subjects[i].bibliography.basic, function(m, item) {
 								response += '<li>' + subjects[i].bibliography.basic[m] + '</li>';
 							});
 							response += '</ul>';
 
 							response += '<h4 class="title">Bibliografia Complementar:</h4>';
-							response += '<ul>';
+							response += '<ul class="list-content">';
 							$.each(subjects[i].bibliography.complementary, function(n, item) {
 								response += '<li>' + subjects[i].bibliography.complementary[n] + '</li>';
 							});
@@ -232,7 +232,7 @@
 
 							response += '<h4 class="title">Condições Mínimas (estar apto a):</h4>';
 							var hasCapable = false;
-							response += '<ul>';
+							response += '<ul class="list-content">';
 							$.each(subjects[i].isCapable, function(o, item) {
 								if (subjects[i].isCapable[o] != "") {
 									response += '<li>' + subjects[i].isCapable[o] + '</li>';
